# Heka

./: .dockerignore  .gitignore  ACTION_PLAN.md  AI_INTEGRATION_SPEC.md  BETA_ACQUISITION_PLAN.md  BUSINESS_MODEL.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_RESPONSE.md  COMPETITIVE_ANALYSIS.md  DATABASE_COMPARISON.md  DECISIONS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ENV_VARS.md  DEPLOYMENT_GUIDE.md  DESIGN.md  Dockerfile  EXECUTIVE_SUMMARY.md  EXPERT_REVIEW_EXECUTIVE_SUMMARY.md  EXPERT_REVIEW_REPORT.md  FINAL_APPROVALS.md  GITHUB_SETUP_GUIDE.md  HOSTING_STRATEGY.md  HOW_TO_FIND_GITHUB_SECRETS.md  IMPLEMENTATION_ROADMAP.md  LEGAL_COMPLIANCE.md  MOBILE_DATABASE_ARCHITECTURE.md  MONGODB_BACKUP_GUIDE.md  MVP_SCOPE.md  PHASE2_SECURITY_COMPLETE.md  PHASE3_AI_SAFETY_COMPLETE.md  PHASE4_DEVOPS_COMPLETE.md  PRE_DEVELOPMENT_DECISIONS.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  REQUIREMENTS.md  RETENTION_STRATEGY.md  REVIEW_AND_EXPERT_CONSULTATION.md  SECURITY_VALIDATION_FINAL.md  (+12 more)
backend/: .env.example  API_ENDPOINTS.md  Dockerfile  EMAIL_SETUP.md  README.md  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: ai_mediation.py  arguments.py  auth.py  checkins.py  couples.py  dashboard.py  dependencies.py  goals.py  notifications.py  perspectives.py  schemas.py  subscriptions.py  users.py
backend/app/core/: limiter.py  logging_config.py  sanitization.py  security.py  sentry_config.py
backend/app/db/: __init__.py  database.py  indexes.py
backend/app/models/: __init__.py  ai_insight.py  ai_suggestion_cache.py  argument.py  couple.py  device_token.py  invitation.py  perspective.py  refresh_token.py  relationship_checkin.py  relationship_goal.py  subscription.py  usage.py  user.py
backend/app/services/: ai_service.py  ai_suggestion_cache.py  device_token_service.py  email_service.py  refresh_token_service.py  safety_service.py  subscription_service.py  usage_service.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_core.py  test_password_reset.py
docs/: DESIGN_PROGRESS.md
frontend/: README.md  package-lock.json  package.json  (+5 more)
(+325 files in other folders)
