[project]
name = "heka-backend"
version = "0.1.0"
description = "Backend API for Heka relationship AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.1",
    "uvicorn[standard]==0.38.0",
    "python-multipart==0.0.12",
    "slowapi==0.1.9",
    "motor==3.7.1",
    "pymongo[srv]==4.15.3",
    "dnspython==2.7.0",
    "redis==7.0.1",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.0",
    "openai>=2.7.2",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "sentry-sdk[fastapi]==2.43.0",
    "stripe==13.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]


[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "ruff==0.1.11",
    "mypy==1.7.1",
    "mongomock-motor==0.0.29",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = false # Stricter would be true, but starting gentle
ignore_missing_imports = true
